# sar

./: 1000_extended.txt  200_extended.txt  SAR_Crawler_lib.py  SAR_lib.py  articulo.txt  ejemplo.txt  main.py  prueba.json  prueba.py  pyproject.toml  python_100.json  python_100_2_5.json  python_100_3_5.json  python_100_4_5.json  python_100_index.txt  python_2_1_2.json  python_2_2_2.json  replit_zip_error_log.txt  result.json
pruebas/: detodounpoco.txt  minimo.txt  multi.txt
python_100/: python_100_2_5.json
soluciones/: 1000_simple.txt  100_extended.txt  200_simple.txt  500_extended.txt  500_simple.txt
tests/: test_100.txt
